# On-TCT-heuristics-and-computational-opportunities

./: .gitignore  README.md  pyproject.toml
RNN/: EvalRNN.py  FedAvgRNN.py  ModelsRNN.py  NTKRNN.py  RNNfunctions.py  Scaffold.py  Scaffold_V2.py
RNN/__pycache__/: TCT on RNN.ipynb
StandardTCT/: FedAvg.py  Scaffold.py
TCT/: TCT MNIST.ipynb  TCT on RNN.ipynb  TCT_CIFAR.ipynb
articles/: TCT.ipynb  benchmark.txt  benchmark_resnet18_stage1.txt
classes/: Algos.py  Client.py  Eval.py  FedAvg.py  FedAvgX.py  Learning.py  LearningX.py  Model.py  Server.py
experiments/: TCT MNIST.ipynb
impl/: TCT-5clients.ipynb  TCT-stage2 à l'ancienne AUTRE.ipynb  TCT-stage2 à l'ancienne.ipynb  TCT-stage2.ipynb  TCT.ipynb  TCTlessworkers.ipynb  TCTvanilla.ipynb  experimentation.ipynb
nv_orga/: Eval.py  FedAvg.py  Models.py  NTK.py  Scaffold.py
results/TCTonRNN/: TCT on RNN.ipynb
results/reducing the amout of stage1 workers/: accuracies_0workers.txt  accuracies_1workers.txt  accuracies_2workers.txt  accuracies_3workers.txt  accuracies_4workers.txt  accuracies_5workers.txt  plot.ipynb
