[tool.poetry]
name = "chocoea"
version = "0.1.0"
description = "L'environnement poetry pour ChocoEA"
authors = ["theo240801 <gaboriaudtheo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.26.0"
torch = "^2.1.1"
torchvision = "^0.16.1"
tqdm = "^4.66.1"
plotly = "^5.18.0"
nbformat = "^5.9.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
